src/test/deca/context/valid/new.deca
// Description:
//    créé une instance de classe 
//
// Resultats:
//
//
// Historique:
//    cree le 16/01/2023

class A {

}

{
    A a = new A();
}